# sentiment-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
api/: app.py
data/processed/: X_val.npy  y_train.npy  y_val.npy
notebooks/: 01_EDA.ipynb  02_preprocessing.ipynb  03_embeddings.ipynb  04_training.ipynb  05_evaluation.ipynb
results/: metrics.json  metrics_test.json
src/: predict.py  preprocessing.py
