[project]
name = "sentiment-classifier-pl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
    "spacy>=3.8.11",
    "xgboost>=3.1.3",
]


[project.optional-dependencies]
dev = ["pytest", "ruff"]
